--- a/src/modules/dex/directives/layout/layout.less
+++ b/src/modules/dex/directives/layout/layout.less
@@ -157,7 +157,7 @@ w-layout {
 }
 
 /* Tablet */
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) and (min-height:481px) {
 
   body.dex {
     w-dex-trade-graph,
@@ -312,10 +312,10 @@ w-layout {
 
 /* end Tablet */
 /* Mobile */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 480px),
+              (min-width: 481px) and (max-width: 768px) and (max-height:480px) {
 
   w-layout {
-    padding-bottom: 90px;
 
     .dex-layout {
       flex-direction: column;
