--- a/src/modules/ui/directives/leftMenu/leftMenu.less
+++ b/src/modules/ui/directives/leftMenu/leftMenu.less
@@ -150,7 +150,7 @@ w-left-menu {
 
     w-responsive-menu {
       width: 100%;
-      top: 61px;
+      top: 60px;
       height: auto;
       position: absolute;
       z-index: 16;
